fixed skills alignment

--- a/css/projects.css
+++ b/css/projects.css
@@ -166,7 +166,7 @@ figure{
 
 @media screen and (max-width: 960px) {
 	#projects{
-		width: 80%;
+		width: 90%;
 		padding-left: 0em;
 	}
 	
